fix: 问题4：IM系统-左侧机器人会话框没有显示时间